homework_4/task_2/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      port: 9001
      targetPort: 80
