homework_4/task_2/svc_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: backend
      port: 9002
      targetPort: 8080
